# innocence.is

./: .gitignore  .gitmodules  CNAME  CURRENT_DEPLOYMENT.md  INNOCENCE_IMPLEMENTATION.md  MVP_ROADMAP.md  PRIVACY_ANALYSIS.md  PRIVACY_FLOW_INNOCENCE.md  PROOF_MODE_SWITCHING.md  README.md  SUCCINCT_TESTNET_SETUP.md  TECH_DEBT.md  TESTNET_DEPLOYMENT.md  ZK_INTEGRATION.md  check-contract-state.js  debug-balance.js  demo-private-trading.js  hugo.toml  index.html  innocence.sln  music.md  start-all.sh  test-succinct-testnet.sh
.github/workflows/: hugo.yml
backend/InnocenceAPI/: InnocenceAPI.csproj  InnocenceAPI.http  Program.cs  appsettings.Development.json  appsettings.json
config/: mainnet.json  testnet-dex.json  testnet.json
content/blog/: _index.md  building-decentralized-voting-sp1-zkvm.md  building-react-ui-sp1-voting.md
contracts/: .env  .env.example  EVM_ONLY_DEPLOYMENT.md  REAL_SP1_DEPLOYMENT_FINAL.md  REAL_VERIFIER_DEPLOYMENT.md  hardhat.config.js  package-lock.json  package.json  test-config.js
contracts/cache/: solidity-files-cache.json
contracts/contracts/: HyperliquidEVMTrading.sol  HyperliquidPrivacySystem.sol  HyperliquidPrivacySystemEVM.sol  HyperliquidPrivacySystemEVMWithRecovery.sol  HyperliquidPrivacySystemInnocence.sol  HyperliquidPrivacySystemTest.sol  HyperliquidPrivacySystemTestnet.sol  HyperliquidPrivacySystemV3.sol  HyperliquidPrivacySystemV4.sol  HyperliquidPrivacySystemV5.sol  HyperliquidPrivacySystemV5Debug.sol  HyperliquidTransferHelper.sol  ISP1Verifier.sol  InnocencePool.sol.bak  (+8 more)
medium/: article-outline.md  sp1-zkvm-tutorial.md
proof-service/: .env  index.js  index.js.bak  package-lock.json  package.json  restart.sh  sanctions-oracle.js  server.js  sp1-formatter.js  test-sanctions.js
static/: test.html
zk-circuits/: README.md
zk-circuits/innocence-circuits/script/: Cargo.toml  build.rs
(+289 files in other folders)
