[package]
version = "0.1.0"
name = "innocence-prover"
edition = "2021"
default-run = "ownership-proof"

[[bin]]
name = "ownership-proof"
path = "src/bin/ownership_proof.rs"

[[bin]]
name = "balance-proof"
path = "src/bin/balance_proof.rs"

[[bin]]
name = "compliance-proof"
path = "src/bin/compliance_proof.rs"

[[bin]]
name = "trade-proof"
path = "src/bin/trade_proof.rs"

[[bin]]
name = "generate-vkeys"
path = "src/bin/generate_vkeys.rs"

[dependencies]
sp1-sdk = "4.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
sha2 = "0.10"
chrono = "0.4"
alloy-sol-types = { workspace = true }
innocence-circuits-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.2.0"
